Test Conversion of Utility, Prompt and Conversion Guide updates.